--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/abrahaosrmartins/studying_html_css_js#readme",
   "dependencies": {
     "json-server": "^0.17.3"
-  }
+  },
+  "devDependencies": {}
 }
